--- a/code/WebApp/WebApp/Components/SubComponents/PriceChart.razor
+++ b/code/WebApp/WebApp/Components/SubComponents/PriceChart.razor
@@ -79,16 +79,16 @@
     }
 
 
-    public async Task UpdateChart(DateTime dateTime, decimal price)
+    public async Task UpdateChart(DateTime dateTime, double price)
     {
         // Füge den neuen Datenpunkt hinzu oder überschreibe den letzten Wert
         if (pricesList.Count > 0 && dateTime.Subtract(pricesList.Last().Key).TotalSeconds < 30)
         {
-            pricesList[pricesList.Count - 1] = new KeyValuePair<DateTime, decimal>(pricesList[pricesList.Count - 1].Key, price);
+            pricesList[pricesList.Count - 1] = new KeyValuePair<DateTime, double>(pricesList[pricesList.Count - 1].Key, price);
         }
         else
         {
-            pricesList.Add(new KeyValuePair<DateTime, decimal>(dateTime, price));
+            pricesList.Add(new KeyValuePair<DateTime, double>(dateTime, price));
         }
 
         // Entferne Datenpunkte, die älter als 30 Minuten sind
@@ -121,5 +121,5 @@
         }
     }
 
-    [Parameter] public List<KeyValuePair<DateTime, decimal>> pricesList { get; set; }
+    [Parameter] public List<KeyValuePair<DateTime, double>> pricesList { get; set; }
 }
