refac: refactored code. remove: removed old unneccessary code.

--- a/code/WebApp/WebApp/Components/Layout/NavMenu.razor
+++ b/code/WebApp/WebApp/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-lg navbardark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex justify-content-center align-items-center" href="" @onclick='(() => SetActive("Cryptocurrencies"))'>
+        <a class="navbar-brand d-flex justify-content-center align-items-center" href="" >
             <img src="/IeCAG_Logo_Lang.png" alt="Logo" height="30" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,11 +48,3 @@
     </div>
 </nav>
 
-@code{
-    private string activePage = "Cryptocurrencies";
-
-    private void SetActive(string navItem)
-    {
-        activePage = navItem;
-    }
-}
