--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -50,8 +50,6 @@
                             <button class="nav-link @(transactionType == "Sell" ? "active" : "")" @onclick='(() => selectTransactionType("Sell"))'>Sell</button>
                         </li>
                     </ul>
-                
-                    
                     
                     <div class="mt-4">
                         <label>Select Cryptocurrency</label>
@@ -62,33 +60,42 @@
                                 <option value="@crypto">@crypto</option>
                             }
                         </InputSelect>
+                        <ValidationMessage For="() => transaction.SelectedCryptocurrency" />
                     </div>
                     
                     <div class="mt-3">
                         <label>Amount</label>
                         <InputNumber @bind-Value="transaction.Amount" class="form-control mt-1" id="amount" oninput="calculatePricePaidAllOrAveragePrice()" />
+                        <ValidationMessage For="() => transaction.Amount" />
                     </div>
 
                     <div class="mt-3 row">
                         <div class="col">
                             <label>Average Price</label>
                             <InputNumber @bind-Value="transaction.AveragePrice" class="form-control mt-1" id="averagePrice" oninput="calculatePricePaidAll()" />
+                            <ValidationMessage For="() => transaction.AveragePrice" />
                         </div>
 
                         <div class="col">
                             <label>Price Paid All</label>
                             <InputNumber @bind-Value="transaction.PricePaidAll" class="form-control mt-1" id="pricePaidAll" oninput="calculateAveragePrice()" />
+                            <ValidationMessage For="() => transaction.PricePaidAll" />
                         </div>
                     </div>
 
                     <div class="mt-3">
                         <label>Transaction Date</label>
                         <InputDate @bind-Value="transaction.TransactionDate" class="form-control mt-1" id="transactionDate" />
+                        <ValidationMessage For="() => transaction.TransactionDate" />
+                    </div>
+
+                    <div class="mt-3 text-center">
+                        <span class="text-danger">@errorMessage</span>
                     </div>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
             </div>
             </EditForm>
         </div>
@@ -146,6 +153,15 @@
             document.getElementById("averagePrice").dispatchEvent(event);
         }
     }
+
+    function closeModal(modalId) {
+        const modalElement = document.querySelector(modalId);
+        const modalInstance = bootstrap.Modal.getInstance(modalElement);
+        if (modalInstance) {
+            modalInstance.hide();
+        }
+    }
+
 </script>
 
 <table class="table">
@@ -180,6 +196,7 @@
     PriceChart priceChart;
     private string transactionType = "Buy";
     private string username;
+    private string? errorMessage;
 
     [SupplyParameterFromForm]
     public TransactionModel transaction { get; set; } = new();
@@ -308,8 +325,18 @@
 
     private async Task AddTransaction()
     {
-        await transactionService.CreateTransactionAsync(username, transaction.SelectedCryptocurrency, transaction.Amount, transaction.PricePaidAll, transaction.TransactionDate, transactionType);
         var walletEntry = walletEntries.FirstOrDefault(sp => sp.Name == transaction.SelectedCryptocurrency);
+        if(walletEntry == null && transactionType == "Sell")
+        {
+            errorMessage = "You don't have any of this cryptocurrency to sell";
+            return;
+        }
+        if(walletEntry != null && walletEntry.Amount < transaction.Amount && transactionType == "Sell")
+        {
+            errorMessage = "You don't have enough of this cryptocurrency to sell";
+            return;
+        }
+        await transactionService.CreateTransactionAsync(username, transaction.SelectedCryptocurrency, transaction.Amount, transaction.PricePaidAll, transaction.TransactionDate, transactionType);
 
         if (walletEntry != null)
         {
@@ -336,9 +363,11 @@
                     Name = transaction.SelectedCryptocurrency,
                     Amount = transaction.Amount,
                     AveragePrice = transaction.AveragePrice,
-                    CurrentPrice = transaction.AveragePrice // Oder den aktuellen Preis setzen, wenn verfügbar
+                    CurrentPrice = await dataFetcherService.FetchCurrentPrice(transaction.SelectedCryptocurrency) // Oder den aktuellen Preis setzen, wenn verfügbar
                 });
         }
+
+        await CloseModalAsync();
 
         transaction = new TransactionModel();
 
@@ -346,4 +375,13 @@
         StateHasChanged();
     }
 
+
+    // JavaScript Interop zum Schließen des Modals
+    [Inject]
+    IJSRuntime JSRuntime { get; set; }
+
+    private async Task CloseModalAsync()
+    {
+        await JSRuntime.InvokeVoidAsync("closeModal", "#transactionModal");
+    }
 }
