fix: now the values in the table don't really overflow and are rounded to 2 decimals

--- a/code/WebApp/WebApp/Components/Pages/Wallet.razor
+++ b/code/WebApp/WebApp/Components/Pages/Wallet.razor
@@ -186,7 +186,7 @@
                 <td>@averagePrice</td>
                 <td>@priceChange %</td>
                 <td>@walletEntry.Amount</td>
-                <td>@(walletEntry.Amount * walletEntry.CurrentPrice)</td>
+                <td>@Math.Round(walletEntry.Amount * walletEntry.CurrentPrice, 2)</td>
             </tr>
         }
     </tbody>
